--- a/index.html
+++ b/index.html
@@ -1,205 +1,201 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Antônio Alberto | Desenvolvedor Front-end & UI Design</title>
-    <script src="https://kit.fontawesome.com/744674e787.js" crossorigin="anonymous"></script>
+    <title>Document</title>
     <link rel="stylesheet" href="./assets/style/style.css">
+    <script src="https://kit.fontawesome.com/744674e787.js" crossorigin="anonymo
+us"></script>
 </head>
-
 <body>
-    <header class="c-wrapper">
-        <nav class="c-menu">
-            <ul class="c-menu__left">
-                <li class="c-menu__item">
-                    <a href="#" class="is-active">Home</a>
+    <header class="wrapper">
+        <nav class="menu">
+            <ul class="menu__left">
+                <li class="menu__item">
+                    <a class="is-active menu__link" href="#">
+                        Home
+                    </a>
                 </li>
-                <li class="c-menu__item">
-                    <a href="#">About</a>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">
+                        About
+                    </a>
                 </li>
             </ul>
-            <a href="http://" target="_blank" rel="noopener noreferrer" class="c-logo">
-                LogoTipo
-            </a>
-            <ul class="c-menu__right">
-                <li class="c-menu__item">
-                    <a href="#">Services</a>
+            <a href="#" class="logo">Logotipo</a>
+            <ul class="menu__right">
+                <li class="menu__item">
+                    <a class="menu__link" href="#">
+                        Serviços
+                    </a>
                 </li>
-                <li class="c-menu__item">
-                    <a href="#">Contact</a>
+                <li class="menu__item">
+                    <a class="menu__link" href="#">
+                        Contato
+                    </a>
                 </li>
             </ul>
         </nav>
     </header>
-
-    <main class="c-wrapper">
-        <hr class="c-divider">
-        <section class="l-home" id="home">
-            <article class="c-content">
-                <header class="c-headline">
-                    <h2 class="c-subtitle">Hey there, welcome</h2>
-                    <h1 class="c-title">I'm Antônio Alberto</h1>
-                </header>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium repellat vero ducimus error
-                    voluptatibus accusamus, sequi delectus aperiam mollitia quod nostrum?
-                </p>
-                <div class="c-call-to-action">
-                    <a class="c-button" href="#">
-                        Serviços
-                        <i class="fas fa-arrow-right"></i>
-                    </a>
-                    <a href="#" class="c-button--clean">
-                        Saiba mais <i class="fas fa-arrow-down"></i>
-                    </a>
-                </div>
-                <ul class="c-social">
-                    <li class="c-social__item"><a href="http://" target="_blank" rel="noopener noreferrer"
-                            class="c-social__link">Rede Social</a></li>
-                    <li class="c-social__item"><a href="http://" target="_blank" rel="noopener noreferrer"
-                            class="c-social__link">Rede Social</a></li>
-                    <li class="c-social__item"><a href="http://" target="_blank" rel="noopener noreferrer"
-                            class="c-social__link">Rede Social</a></li>
-                </ul>
-            </article>
-            <div class="c-profile-image">
-                <img src="./assets/img/profile-image.png"
-                    alt="Este sou eu! E você pode ver mais sobre mim através das minhas redes sociais!">
-            </div>
-        </section>
-        <hr class="c-divider">
-        <section class="l-about" id="about">
-            <div class="c-gallery">
-                <img src="https://source.unsplash.com/random" alt="" srcset="">
-                <img src="https://source.unsplash.com/random" alt="" srcset="">
-                <img src="https://source.unsplash.com/random" alt="" srcset="">
-                <img src="https://source.unsplash.com/random" alt="" srcset="">
-            </div>
-
-            <article class="c-content">
-                <header class="c-headline">
-                    <h2 class="c-subtitle">Um pouco sobre mim</h2>
-                    <h1 class="c-title">Hi, its me! I'm here to help you in a project</h1>
-                </header>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda ullam magnam mollitia officia
-                    numquam ipsam rerum? Sit ratione, laborum suscipit incidunt quidem nisi. Animi eligendi repudiandae
-                    aut velit. Impedit, enim!
-                </p>
-                <dl>
-                    <dt>Soft Skills</dt>
-                    <dd>Skill aleatório</dd>
-                    <dd>Skill aleatório</dd>
-                    <dd>Skill aleatório</dd>
-                    <dd>Skill aleatório</dd>
-                </dl>
-                <dl>
-                    <dt>Hard Skills</dt>
-                    <dd>Skill aleatório</dd>
-                    <dd>Skill aleatório</dd>
-                    <dd>Skill aleatório</dd>
-                    <dd>Skill aleatório</dd>
-                </dl>
-                <div class="c-call-to-action">
-                    <a class="c-button" href="#">Serviços -></a>
-                    <a href="#" class="c-button--clean">Download C.V.</a>
-                </div>
-            </article>
-        </section>
-        <hr class="c-divider">
-        <section class="l-services" id="services">
-            <article class="c-content">
-                <header class="c-headline">
-                    <h2 class="c-subtitle">Um pouco sobre mim</h2>
-                    <h1 class="c-title">Hi, its me! I'm here to help you in a project</h1>
-                </header>
-                <ul class="c-service__list">
-                    <li class="c-service">
-                        <span class="c-icon">
-                            <i class="fab fa-figma"></i>
-                            <p class="c-subtitle">Prototipação</p>
-                        </span>
-                        <div class="c-service__definition">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima officiis aliquam repudiandae,
+    <!--  -->
+    <main class="wrapper">
+        <section class="home" id="home">
+            <article>
+                <div class="content">
+                    <header class="headline">
+                        <p class="subtitle">Olá, seja bem vindo</p>
+                        <h1 class="title">Eu sou o <br/>Antônio Alberto</h1>
+                        <h2 class="paragraph">Dev Front End, UI Designer</h2>
+                    </header>
+                    <p class="paragraph">Empresas são sistemas vivos, entender essa dinâmica cria um colaborar funcional</p>
+                    <footer class="footnote">
+                        <div class="call-to-action">
+                            <a href="#" class="button">Serviços</a>
+                            <a href="" class="button--as-link">
+                                Saiba mais
+                                <!-- <i class="fas fa-arrow-down"></i> -->
+                            </a>
                         </div>
-                        <a href="#" class="c-button--link">Entre em contato</a>
-                    </li>
-                </ul>
-                <div class="c-modal">
-                    <p class="c-modal__content">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat fuga voluptatibus eaque, officia inventore
+                    </footer>
+                    <ul class="social">
+                        <li class="social__item"><a href="#" target="_blank" rel="noopener noreferrer" class="social__link">Rede social</a></li>
+                        <li class="social__item"><a href="#" target="_blank" rel="noopener noreferrer" class="social__link">Rede social</a></li>
+                        <li class="social__item"><a href="#" target="_blank" rel="noopener noreferrer" class="social__link">Rede social</a></li>
+                    </ul>
+                </div>
+                <img src="./assets/img/profile-image.png" alt="Este sou eu!" srcset="">
+            </article>
+        </section>
+        
+        <hr class="divider">
+
+        <section class="about" id="about">
+            <article>
+                <div class="gallery">
+                    <img src="https://source.unsplash.com/random/225x300" alt="" srcset="" class="gallery__item">
+                    <img src="https://source.unsplash.com/random/225x300" alt="" srcset="" class="gallery__item">
+                    <img src="https://source.unsplash.com/random/225x300" alt="" srcset="" class="gallery__item">
+                    <img src="https://source.unsplash.com/random/225x300" alt="" srcset="" class="gallery__item">
+                </div>
+                <div class="content">
+                    <header class="headline">
+                        <h2 class="subtitle">Um pouco sobre mim</h2>
+                        <h1 class="title">Conheça um pouco mais sobre quem eu sou</h1>
+                    </header>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere recusandae magnam dolore reiciendis laboriosam libero dicta? Fugit nam magni dignissimos voluptatibus minus amet, illo, consectetur itaque sapiente optio ipsa fugiat!
                     </p>
+                    <dl>
+                        <dt>Soft skills</dt>
+                        <dd>Lorem ipsum dolor sit,</dd>
+                        <dd>Lorem ipsum dolor sit,</dd>
+                        <dd>Lorem ipsum dolor sit,</dd>
+                    </dl>
+                    <footer class="footnote">
+                        <div class="call-to-action">
+                            <a href="#" class="button">
+                                Contato
+                                <!-- <i href="" class="button--as-link"> -->
+                            </a>
+                            </a>
+                            <a href="#" class="button--as-link">
+                                Download CV
+                                <i class="fas fa-file-download"></i>
+                            </a>
+                        </div>
+                    </footer>
                 </div>
             </article>
         </section>
-        <hr class="c-divider">
-        <section class="l-contact" id="contact">
-            <article class="c-content">
-                <header class="c-headline">
-                    <h2 class="c-subtitle">Contact me for more infos</h2>
-                    <h1 class="c-title">Hey, send a message to me from more infos!</h1>
-                </header>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem adipisci qui perferendis quidem, fuga minus omnis libero,
-                </p>
-                <form action="/">
-                    <label for="client-name">
-                        <input type="text" name="cliente-name" id="client-name">
-                    </label>
-                    <label for="client-message">
-                        <input type="text" name="cliente-message" id="client-message">
-                    </label>
-                    <button type="submit" class="c-button">Enviar e-mail</button>
-                </form>
-                <ul class="c-social">
-                    <li class="c-social__item"><a href="http://" target="_blank" rel="noopener noreferrer"
-                            class="c-social__link">Rede Social</a></li>
-                    <li class="c-social__item"><a href="http://" target="_blank" rel="noopener noreferrer"
-                            class="c-social__link">Rede Social</a></li>
-                    <li class="c-social__item"><a href="http://" target="_blank" rel="noopener noreferrer"
-                            class="c-social__link">Rede Social</a></li>
-                </ul>
+
+        <hr class="divider">
+
+        <section class="services" id="services">
+            <article>
+                    <header class="headline">
+                        <h2 class="subtitle">Sou desenvolvedor Front End, UI Designer e muito mais!</h2>
+                        <h1 class="title">Estas são minhas especialidades no mundo da tecnologia</h1>
+                    </header>
+                    <p class="paragraph">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste quo tempora cupiditate sit, fuga illum omnis assumenda consequuntur earum repudiandae ipsam voluptatem maiores commodi numquam, magni exercitationem voluptates quasi veniam.
+                    </p>
+                    <ul class="services">
+                        <li class="service">
+                            <span class="icon">
+                                <i class="fab fa-figma"></i>
+                                <p class="subtitle">Ui Design</p>
+                            </span>
+                            <p class="paragraph">Protótipos reais, o que você sonha para o site da sua empresa pode virar realidade!</p>
+                            <a href="#" class="button--as-link">Contratar</a>
+                        </li>
+                        <li class="service">
+                            <span class="icon">
+                                <i class="fab fa-terminal"></i>
+                                <p class="subtitle">Criação de website</p>
+                            </span>
+                            <p class="paragraph">Websites funcionais para você que deseja inserir sua empresa no mercado web.</p>
+                            <a href="#" class="button--as-link">Contratar</a>
+                        </li>
+                        <li class="service">
+                            <span class="icon">
+                                <i class="fab fa-desktop"></i>
+                                <p class="subtitle">Manutenção</p>
+                            </span>
+                            <p class="paragraph">Uma empresa não pode ficar sem um computador, tanto quanto alguém não pode ficar sem o coração!</p>
+                            <a href="#" class="button--as-link">Contratar</a>
+                        </li>
+                    </ul>
+                    <div class="modal">
+                        <p class="paragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In quaerat aperiam distinctio optio</p>
+                    </div>
             </article>
-            <div class="c-map"><img src="./" alt="This is my country, my city" srcset=""></div>
+        </section>
+        
+        <hr class="divider">
+
+        <section class="contact" id="contact">
+            <article>
+                <img src="./assets/img/map.png" alt="" srcset="" class="map">
+                <div class="content">
+                    <header class="headline">
+                        <h2 class="subtitle">Entre em contato comigo</h2>
+                        <h1 class="title">Vamos conversar um pouco mais, me envie um e-mail</h1>
+                    </header>
+                    <form action="">
+                        <input type="text" name="" id="name" placeholder="Seu nome aqui!">
+                        <input type="text" name="" id="message" placeholder="A sua mensagem vai aqui `.´">
+                        <input type="button" value="Enviar" class="button">Enviar</input>
+                    </form>
+                </div>
+            </article>
         </section>
     </main>
-    <hr class="c-divider">
-    <footer>
+
+    <footer class="wrapper">
         <div>
-            <h1 class="c-title">Antônio Alberto</h1>
-            <p>
-                Desenvolvido com 💚 por Antônio Alberto. Desde 2019.
-            </p>
+            <h2 class="title">Antônio Alberto</h2>
+            <p class="paragraph">Desenvolvido com carinho por mim mesmo!</p>
         </div>
         <div>
-            <p class="c-subtitle">Hello World</p>
-            <p>Obrigado por ter chego até aqui! Você pode me enviar um e-mail a qualquer momento para conversarmos!</p>
-            <form action="/">
-                <label for="client-name">
-                    <input type="text" name="cliente-name" id="client-name">
-                </label>
-                <label for="client-message">
-                    <input type="text" name="cliente-message" id="client-message">
-                </label>
-                <button type="submit" class="c-button">Enviar e-mail</button>
-            </form>
+            <p class="title">Hello world</p>
+            <p class="paragraph">Você pode me enviar uma mensagem também</p>
+            <input type="text" name="" id="footer-message" class="message"><input type="button" value="Enviar">Enviar</input>
+
         </div>
         <div>
-            <p class="c-subtitle">Links Úteis <i class="fas fa-external-link-alt"></i></p>
-            <p>Fique por dentro das minhas novidades, me siga nas redes sociais para conteúdos ou futuras contratações</p>
-            <ul class="c-social">
-                <li class="c-social__item"><a href="http://" target="_blank" rel="noopener noreferrer"
-                        class="c-social__link">Rede Social</a></li>
-                <li class="c-social__item"><a href="http://" target="_blank" rel="noopener noreferrer"
-                        class="c-social__link">Rede Social</a></li>
-                <li class="c-social__item"><a href="http://" target="_blank" rel="noopener noreferrer"
-                        class="c-social__link">Rede Social</a></li>
+            <span>
+                <p class="title">Links úteis</p>
+                <i class="fab fas-link"></i>
+            </span>
+            <ul class="social">
+                <li class="social__item"><a href="#" target="_blank" rel="noopener noreferrer" class="social__link">Rede social</a></li>
+                <li class="social__item"><a href="#" target="_blank" rel="noopener noreferrer" class="social__link">Rede social</a></li>
+                <li class="social__item"><a href="#" target="_blank" rel="noopener noreferrer" class="social__link">Rede social</a></li>
+                <li class="social__item"><a href="#" target="_blank" rel="noopener noreferrer" class="social__link">Rede social</a></li>
             </ul>
         </div>
     </footer>
 </body>
-
 </html>
